[package]
name = "Dehydrate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
